2011-04-11  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Darin Fisher.

        [chromium]: Get the list of misspelled words in the WebKit code insetad of in chromium's RenderView
        https://bugs.webkit.org/show_bug.cgi?id=58260

        * public/WebContextMenuData.h:
        * public/WebSpellCheckClient.h:
        (WebKit::WebSpellCheckClient::spellCheck):
        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::checkSpellingOfString):

2011-04-12  Bill Budge  <bbudge@chromium.org>

        Reviewed by Darin Fisher.

        Move the WebURLLoaderOptions struct into its own file and rename the CrossOriginRequestPolicy enum to conform to the WebKit coding standard.
        https://bugs.webkit.org/show_bug.cgi?id=58287

        No new tests. No new functionality exposed.

        * WebKit.gyp:
        * public/WebURLLoader.h:
        * public/WebURLLoaderOptions.h: Added.
        (WebKit::WebURLLoaderOptions::WebURLLoaderOptions):
        * src/AssociatedURLLoader.cpp:
        (WebKit::AssociatedURLLoader::AssociatedURLLoader):
        * src/AssociatedURLLoader.h:

2011-04-11  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [chromium] script formatting doesn't work when chromium is built with debug_devtools=1.
        https://bugs.webkit.org/show_bug.cgi?id=58232

        * WebKit.gyp:

2011-04-11  John Bates  <jbates@google.com>

        Reviewed by Kenneth Russell.

        chromium support for glSetLatch and glWaitLatch between 3D contexts
        https://bugs.webkit.org/show_bug.cgi?id=58003

        * public/WebGraphicsContext3D.h:
        (WebKit::WebGraphicsContext3D::getParentToChildLatchCHROMIUM):
        (WebKit::WebGraphicsContext3D::getChildToParentLatchCHROMIUM):
        (WebKit::WebGraphicsContext3D::waitLatchCHROMIUM):