@@ -255,11 +255,6 @@ void WebSettingsImpl::setAllowFileAccessFromFileURLs(bool allow)
     m_settings->setAllowFileAccessFromFileURLs(allow);
 }
 
-void WebSettingsImpl::setAllowRunningInsecureContent(bool allow)
-{
-    m_settings->setAllowRunningInsecureContent(allow);
-}
-
 void WebSettingsImpl::setTextDirectionSubmenuInclusionBehaviorNeverIncluded()
 {
     // FIXME: If you ever need more behaviors than this, then we should probably
